# Arcade

./: CMakeLists.txt  LICENSE  Makefile  README  canon.cpp  main.cpp
Caca_Sources/: LibCaca.cpp  LibCaca.hpp
Core_Sources/: AGame.cpp  AGame.hpp  ALib.cpp  ALib.hpp  Arcade.cpp  Arcade.hpp  DataBridge.hpp  Entity.cpp  Entity.hpp  GameManager.cpp  GameManager.hpp  GameMap.cpp  GameMap.hpp  GameMenu.cpp  GameMenu.hpp  IEntity.hpp  IGame.hpp  ILib.hpp  ISprite.hpp  LibLoader.cpp  LibLoader.hpp  Sprite.cpp  Sprite.hpp  Vector2D.cpp  Vector2D.hpp
Graphic_Includes/Libcaca/: caca++.h
Sdl2_Sources/: LibSdl2.cpp  LibSdl2.hpp
Sfml_Sources/: LibSfml.cpp  LibSfml.hpp
Snake_Sources/: FoodEntity.cpp  FoodEntity.hpp  LibSnake.cpp  LibSnake.hpp  LibSnake2.cpp  SnakeBodyEntity.cpp  SnakeBodyEntity.hpp  SnakeDataBridge.hpp  SnakeEntity.cpp  SnakeEntity.hpp  WallEntity.cpp  WallEntity.hpp
Snake_Sources/mapSnake/: lvl1.map  lvl2.map
Snake_Sources/spriteSnake/: background  food  snake  snakebody  wall
